@@ -341,7 +341,8 @@ void			HUDRenderer::setMajorFontSize(int, int height)
 
 void			HUDRenderer::setMinorFontSize(int, int height)
 {
-  const float s = (float)height / 48.0f;
+  const float add = SceneRenderer::getInstance()->useBigFont() ? 5.0f : 0.0f;
+  const float s = add + (float)height / 48.0f;
   if (s > 20.0f)
     minorFont = TextureFont::getTextureFont(TextureFont::HelveticaBold, True);
   else if (s > 10.0f)
